WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28027
Files with accents in names are submitted incorrectly due to use of precomposed Unicode
https://bugs.webkit.org/show_bug.cgi?id=28027
Summary
Files with accents in names are submitted incorrectly due to use of precompos...
Alexey Proskuryakov
Reported
2009-08-05 14:51:57 PDT
Steps to reproduce: 1) Mount an NFS share from a non-Mac system. 2) Create a file with an accent in its name (e.g. ё-моё.txt) 3) Attach this file to a new e-mail message in Yahoo Mail. Results: the process never finishes, the spinner keeps spinning. <
rdar://7064428
>
Attachments
proposed fix
(1.96 KB, patch)
2009-08-05 15:20 PDT
,
Alexey Proskuryakov
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-08-05 15:20:26 PDT
Created
attachment 34188
[details]
proposed fix
Oliver Hunt
Comment 2
2009-08-05 15:22:09 PDT
Comment on
attachment 34188
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 3
2009-08-05 17:11:37 PDT
Committed <
http://trac.webkit.org/changeset/46822
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug