        Reviewed by Oliver Hunt.

https://bugs.webkit.org/show_bug.cgi?id=28027
        <rdar://7064428> Files with accents in names are submitted incorrectly due to use of
        precomposed Unicode

        * platform/network/mac/FormDataStreamMac.mm: (WebCore::setHTTPBody): Use getFileSize() from
        FileSystem.h instead of custom code for getting file size. This adds path normalization
        necessary with some file systems on Mac. This also loses a S_IFMT check, which didn't seem
        important anyway.



Canonical link: https://commits.webkit.org/38428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46822 268f45cc-cd09-0410-ab3c-d52691b4dbfc